<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details_view.InformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_time" />

        <TextView
            android:id="@+id/information_timeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requesting"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8sp" />

        <Button
            android:id="@+id/information_buttonSetTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time" />

    </LinearLayout>
</FrameLayout>