<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceDetails">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/details_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_toolbar">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/details_tabItemMeasurements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurements" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/details_tabItemAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/details_tabItemSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/details_viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>